packages/python-alpm/python_alpm-0.4.0.tar.gz/python_alpm-0.4.0/alpm-srcinfo/tests/parse_errors/unexpected_pkgname_property.srcinfo
pkgbase = test
	pkgver = 1.0.0
	pkgrel = 1

pkgname = test
	# validpgpkeys is not valid in the context of pkgname
	validpgpkeys = 4A0C4DFFC02E1A7ED969ED231C2358A25A10D94E
